replaced getFirst() with get(0) because Google Cloud does not recognize the latter